beautify the blog

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,6 +9,7 @@
     <meta name="theme-color" content="#157878">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+    <link rel="stylesheet" href="{{ '/assets/css/post.css' | relative_url }}">
   </head>
   <body>
     <section class="page-header">
@@ -20,7 +21,7 @@
       {{ content }}
 
       <footer class="site-footer">
-        <p></p>
+        <p>Posted at {{ page.date | date_to_long_string }}</p>
         <span class="site-footer-credits">
             Copyright &copy; 2017 - zxhfirefox
         </span>
