--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -10,22 +10,19 @@
     <meta name="theme-color" content="#157878">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+    {% if page.css_file %}
+      {% capture css_file_path %}/assets/css/{{ page.css_file }}.css{% endcapture %}
+      <link rel="stylesheet" href="{{ css_file_path | relative_url }}">
+    {% endif %}
   </head>
   <body>
-    <section class="page-header">
-      <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
-      <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
-    </section>
+    
+    {% include header.html %}
 
     <section class="main-content">
       {{ content }}
 
-      <footer class="site-footer">
-        <span class="site-footer-credits">
-            Copyright &copy; 2017 - zxhfirefox
-        </span>
-
-      </footer>
+      {% include footer.html %}
     </section>
 
     {% if site.google_analytics %}
