--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
         <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">
             <img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/80x15.png" />
         </a>
-        <p style="opacity: 0.8">使用 Cayman - Jekyll 作为主题，您可以在 GitHub 找到本站源码 - © 2017</p>
+        <p style="opacity: 0.8">使用 Cayman - Jekyll 作为主题 © 2018</p>
         <p>- zxhfirefox</p>
     </span>
 </footer>
