--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="{{ page.lang | default: "en-US" }}">
+<html lang={{ page.lang | default: "en-US" }}>
   <head>
     <meta charset="UTF-8">
 
