--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,20 +1,8 @@
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
-  <head>
-    <meta charset="UTF-8">
-    {% seo %}
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="theme-color" content="#157878">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
-    {% if page.css_file %}
-      {% capture css_file_path %}/assets/css/{{ page.css_file }}.css{% endcapture %}
-      <link rel="stylesheet" href="{{ css_file_path | relative_url }}">
-    {% endif %}
-  </head>
+    {% include head.html %}
   <body>
-
-      {{ content }}
-    
+    <!-- {% include nav.html %} -->
+    {{ content }}
   </body>
 </html>
