--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,7 +2,10 @@
 layout: default
 ---
 
-{% include header.html %}
+<section class="page-header">
+    <h1 class="project-name">{{ site.title }}</h1>
+    <h2 class="project-tagline">{{ site.description }}</h2>
+</section>
 
 <main id="content" class="main-content" role="main">
       
