--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html lang="{{ site.lang | default: "en-US" }}">
     {% include head.html %}
   <body>
-    <!-- {% include nav.html %} -->
+    {% include navigation.html %}
     {{ content }}
   </body>
 </html>
