--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,12 @@
 <html lang="{{ site.lang | default: "en-US" }}">
     {% include head.html %}
   <body>
-    {% include navigation.html %}
-    {{ content }}
+    <header class="page-header" role="banner">
+      {% include navigation.html %}
+    </header>
+
+    <main id="content" class="main-content" role="main">
+      {{ content }}
+    </main>
   </body>
 </html>
