--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,12 +2,10 @@
 <html lang="{{ site.lang | default: "en-US" }}">
     {% include head.html %}
   <body>
-    <header class="page-header" role="banner">
-      {% include navigation.html %}
-    </header>
-
+    {% include header.html %}
     <main id="content" class="main-content" role="main">
       {{ content }}
     </main>
+    {% include footer.html %}
   </body>
 </html>
